# MLFlowAugmented

./: README.md  pyproject.toml
configs/: config.yaml
src/: practice1.py  practiceMLFlow1.py
