[tool.poetry]
name = "mlflowaugmented"
version = "0.1.0"
description = "MLFlow with other tools"
authors = ["hitoruna <hitorunajp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
mlflow = "^2.17.2"
scikit-learn = "^1.5.2"
loguru = "^0.7.2"
hydra-core = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
